fix: increase z-index of tooltip

--- a/assets/stylesheets/common/retort.scss
+++ b/assets/stylesheets/common/retort.scss
@@ -54,10 +54,9 @@
     word-wrap: normal;
     left: 50%;
     transform: translate(-50%, 0);
-    z-index: 1;
+    z-index: 10;
     pointer-events: none;
     word-break: break-word;
-    
   }
 
   &__count {
